--- a/.settings/com.google.appengine.eclipse.core.prefs
+++ b/.settings/com.google.appengine.eclipse.core.prefs
@@ -3,3 +3,5 @@ filesCopiedToWebInfLib=appengine-api-1.0-sdk-1.8.1.1.jar|appengine-api-labs.jar|
 gaeDatanucleusVersion=v2
 gaeDeployDialogSettings=
 gaeHrdEnabled=true
+googleCloudSqlEnabled=false
+localDevMySqlEnabled=true
