--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8" standalone="no"?><web-app xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="2.5" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 	<servlet>
-		<servlet-name>Bluecollar</servlet-name>
+		<servlet-name>Mavicollar</servlet-name>
 		<servlet-class>com.isd.bluecollar.BluecollarServlet</servlet-class>
 	</servlet>
 	<servlet-mapping>
-		<servlet-name>Bluecollar</servlet-name>
-		<url-pattern>/bluecollar</url-pattern>
+		<servlet-name>Mavicollar</servlet-name>
+		<url-pattern>/mavicollar</url-pattern>
 	</servlet-mapping>
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
