--- a/src/com/isd/bluecollar/controller/report/language-de.properties
+++ b/src/com/isd/bluecollar/controller/report/language-de.properties
@@ -4,10 +4,10 @@ noyear=fehlende Jahresdaten
 labelname=Name:
 labelmonth=Monat:
 labelyear=Jahr:
-labelovertimecompensation=Überstundenausgleich:
+labelovertimecompensation=Ãœberstundenausgleich:
 labeltotalhours=Gesamtstunden:
 labelrequiredhours=Sollstunden:
-labelovertime=Überstunden:
+labelovertime=Ãœberstunden:
 labelpds=Ort, Datum, Unterschrift
 labelemployee=Mitarbeiter
 columnhours=Std.
