--- a/src/com/isd/bluecollar/controller/report/language-fr.properties
+++ b/src/com/isd/bluecollar/controller/report/language-fr.properties
@@ -1,19 +1,19 @@
 nouser=manquant utilisateur
-nomonth=données manquantes du mois
-noyear=manquant données de l'année
+nomonth=donnees manquantes du mois
+noyear=manquant donnees de l'annee
 labelname=Nom:
 labelmonth=Mois:
-labelyear=Année:
-labelovertimecompensation=Rémunération des heures supplémentaires:
+labelyear=Annee:
+labelovertimecompensation=Remuneration des heures supplementaires:
 labeltotalhours=Nombre total d'heures:
 labelrequiredhours=Heures obligatoires:
-labelovertime=Heures supplémentaires:
+labelovertime=Heures supplementaires:
 labelpds=Site, Date, Signature
-labelemployee=Employé
+labelemployee=Employe
 columnhours=Hrs.
 columnnumbers=Nr.
 columnname=Nom
 sickness=Maladie
 vacation=Vacances
 reportname=HeuresDeTravail
-telework=Télétravail:
+telework=Teletravail:
